# werss

./: .dockerignore  .env.dev.example  .env.example  .gitignore  BUG_REPORT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.cn  QUICK_START.md  README.md  capture_werss_ui.py  config.example.yaml  docker-compose.app-only.yml  docker-compose.dev.yml  docker-compose.standalone.db-network.yml  docker-compose.standalone.traefik.yml  docker-compose.standalone.yml  docker-compose.yml  final_cleanup.py  init_sys.py  install.sh  main.py  pyproject.toml  requirements.txt  responsive_audit.py  revert_branding.py  start.sh  start_dev.sh  test_embedding_local.py  test_tag_clustering_local.py  ui_audit_werss.py  web.py
.github/workflows/: README-TENCENT.md  README.md  base_os.yaml  buidweb.yaml  docker-publish.yaml  docker-tencent.yaml  docker_hub.yaml  release.yaml
apis/: api_key.py  article.py  article_tag.py  auth.py  config_management.py  dashboard.py  export.py  mcp.py  message_task.py  mps.py  res.py  rss.py  sys_info.py  tag_clusters.py  tags.py  tools.py  user.py
core/: article_filter.py  article_lax.py  auth.py  base.py  cache.py  config.py  config_overrides.py  db.py  debug_log.py  env_loader.py  middleware.py  resource.py  rss.py  tag_cluster.py  tag_extractor.py  visualization.py
core/embedding/: __init__.py  base.py  bigmodel.py  doubao.py  factory.py
core/lax/: template_parser.py
core/models/: __init__.py  api_key.py  article.py  article_ai_filter.py  article_tags.py  base.py  feed.py  message_task.py  tag_cluster_aliases.py  tag_cluster_members.py  tag_clusters.py  tag_embeddings.py  tag_profiles.py  tag_similarities.py  tags.py
core/notice/: __init__.py  feishu.py
core/queue/: queue.py
core/res/: avatar.py
core/storage/: __init__.py  minio_client.py
core/task/: task.py
core/webhook/: parse.py
core/wx/: base.py
core/yaml_db/: store_config.py
docs/: CONTRIBUTING.md  DOCKER_STANDALONE.md  MCP_REMOTE.md  QUICK_START.md  ROADMAP.md  TAG_CLUSTER_CHECKLIST.md  TRAEFIK_EXISTING.md  UV_VENV_GUIDE.md  idea.md
driver/: auth.py  base.py  playwright_driver.py  success.py  wx.py  wx_api.py  wxarticle.py
jobs/: failauth.py  fetch_no_article.py  mps.py  notice.py  webhook.py
migrations/: add_article_publish_date_to_article_tags.sql  add_tags_is_custom.sql  fix_article_publish_date_from_articles.sql
qtserver/: package.json
schemas/: tags.py
scripts/: backfill_missing_article_tags.py  build_tag_clusters.py  distill_chinese_model2vec.py  get_token.py  re_extract_all_tags.py  reset_article_status.py  reset_article_status.sql  test_keyword_extraction.py  test_keyword_from_db_api.py  update_article_status.py
static/: index.html
tools/: html.py  proxy.py
web_ui/: .env.development  .env.production  README.md  TAILWIND_MIGRATION.md  build.sh  components.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
(+170 files in other folders)
